--- a/Frontpage/SESO_Frontpage.css
+++ b/Frontpage/SESO_Frontpage.css
@@ -1,3 +1,8 @@
+html, body {
+	   margin: 0;
+	   padding: 0;
+    }
+/*GlobalNavBar*/
 #GlobalNav {
     margain: 0;
     padding: 0;
@@ -26,4 +31,54 @@
 }
 #GlobalNav li a:hover {
        color: white;
+/*Image Show*/
+}
+#FrontSlideshow {
+    width: 100%;
+    height: 900px;
+    position: relative;
+    background-image: url(Minimalism.jpg);
+    background-position: center;
+    background-size: cover;
+}
+/*MAIN IMAGE: SESO Text*/
+#FrontSlideshow_Title {
+	font-family: 'Lato-Light', sans-serif;
+	font-size: 200px;
+	color: white;
+	text-align: center;
+}
+/*MAIN IMAGE: Sub Seso text*/
+#SubMainText {
+	color: white;
+	font-family: 'Lato-Light', sans-serif;
+	font-size: 20px;
+	text-align: center;
+}
+#LearnMoreLink a:link {
+	align-content: center;
+	font-family: 'Lato-Light', sans-serif;
+	color: dodgerblue;
+	text-decoration: none;
+	text-align: center;
+	display: block;
+	margin: 0 auto;
+	font-size: 20px;
+	padding-top: 10px;
+}
+#LearnMoreLink a:hover {
+	text-decoration: underline;
+}
+#LearnMoreLink a:visited {
+	color: dodgerblue;
+}
+#GlobalFooter {
+	list-style: none;
+	list-style-type: none;
+	background-color: #2B2B2B;
+	text-align: center;
+	padding: 5px;
+	font-family: 'Lato-light', sans-serif;
+	color: white;
+	padding-top: 5px;
 }
