--- a/Frontpage/SESO_Frontpage.css
+++ b/Frontpage/SESO_Frontpage.css
@@ -21,6 +21,7 @@ html, body {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+	font-family: 'Lato-Light', sans-serif;
 }
 #GlobalNav ul {
     list-style-type: none;
@@ -30,14 +31,15 @@ html, body {
     background-color: 17191A;
 }
 #GlobalNav li a:hover {
-       color: white;
+	   background-color: #ebebee;
+	   color: black;
 /*Image Show*/
 }
 #FrontSlideshow {
     width: 100%;
     height: 900px;
     position: relative;
-    background-image: url(Minimalism.jpg);
+    background-image: url(Background.jpg);
     background-position: center;
     background-size: cover;
 }
